--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             font-size: 1.2em;
         }
         .options button:hover {
-            background-color: #6fc5e7;
+            background-color: #87CEEB;
         }
         .result, .feedback {
             font-size: 1.2em;
@@ -73,6 +73,7 @@
     
     <!-- Score and Name of Quiz Section -->
     <div class="score">
+        <p id="quiz-name"></p>
         <p>Score: <span id="score">0</span> / <span id="total-questions"></span></p>
     </div>
 
